[tool.poetry]
name = "picasimpler"
version = "0.1.0"
description = ""
authors = ["Andres Zelcer <45225345+azelcer@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scipy = "^1.11.2"
numpy = "^1.24.3"
numba = "^0.58.0"
h5py = "^3.11.0"
matplotlib = "^3.7.3"
pandas = "^2.1.1"
pyyaml = "^6.0.1"
tqdm = "^4.66.1"
scikit-learn = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
